...
                    }
                    
                    Spacer()
                    
                    // Navigation Link
                    NavigationLink(destination: LoanDetailsView(loanDetails: payment.loanDetails)) {
                        Text("Make a payment")
                            .font(.subheadline)
                            .foregroundColor(.white)
                            .padding()
                            .frame(maxWidth: .infinity)
                            .background(Color.purple)
                            .cornerRadius(12)
                            .shadow(color: .gray.opacity(0.3), radius: 8, x: 0, y: 4)

                            .accessibility(identifier: "makePaymentButton")

                    }
                    .padding()
                    
                } else {
                    Text("Loading...")
...
